syntax = "proto3";

package com.road.yishi.proto.building;

message BuildingOptionReqMsg {
  int32 buildingId = 1;
  int32 sonType = 2;
}
